--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="module2-solution/angular.min.js"></script>
+    <script src="module2-solution/app.js"></script>
     <style>
       .emptyMessage {
         font-weight: bold;
